@@ -425,7 +425,7 @@
       </activation>
       <properties>
         <!--
-            Some tests need reflective access to the internals of these packages. It is ony the
+            Some tests need reflective access to the internals of these packages. It is only the
             tests themselves and not the code being tested that needs that access, though there's no
             obvious way to ensure that.
 
@@ -435,7 +435,6 @@
         <test.add.opens>
           --add-opens java.base/java.lang=ALL-UNNAMED
           --add-opens java.base/java.util=ALL-UNNAMED
-          --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
           --add-opens java.base/sun.security.jca=ALL-UNNAMED
         </test.add.opens>
       </properties>
